--- a/4_four/index.html
+++ b/4_four/index.html
@@ -16,15 +16,15 @@
     <body>
         <paragraph>Welcome! Here you can find the following things:</paragraph>
         <ol>
-            <li><a href="#logo"><em>Company's logo</em></a></li>
+            <li><a href="#logo"><em>Company's logo</em></a></li> 
             <li><a href="#employees">List of employees</a></li>
         </ol>
 
         <h1>Company's logo
         <paragraph>Company uses the following logos:</paragraph>
         <ul>
-            <li>New logo:<img source="new_logo.gif"/></li>
-            <li>Old logo:<img source="old_logo.gif"/></li>
+            <li>New logo:<img src="new_logo.gif"/></li> 
+            <li>Old logo:<img src="old_logo.gif"/></li>
         </ul>
 
         <h1>List of employees </h1>
